syntax = "proto3";

package HtmlScraper;

option go_package = "./;HtmlScraper";

message Request {
  string html_text = 1;       // HTML text string
  string page_type = 2;       // Type of the page
}

message Response {
  StatusCode status = 1;
  string     json_data = 2;
}

service HtmlScraper {
  // Process HTML and return JSON
  rpc ProcessPage(Request) returns (Response);
}

enum StatusCode {
    OK = 0;  // No errors
    ERROR_PARSER = 1;  // Failed to parse the Html
    ERROR_INTERNAL = 99;  // Server-side error
}